# kim

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  COPYING  ChangeLog  LICENSE-CeCILL-fr.md  LICENSE-en.md  LICENSE.md  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  aminclude_static.am  configure  configure.ac
config/: config.h.in  fix-timestamp.sh  git-release  git-version-gen  version  version.configure.ac
config/m4/: ax_c_cxx_enable_debug_option.m4  ax_code_statistics.m4  ax_debian_package.m4  ax_define_macro_with_key_value_args.m4  ax_external_included_c_library_detection.m4  ax_external_included_cpp_header_detection.m4  ax_external_included_cxx_library_detection.m4  ax_external_included_generic_library_check.m4  ax_external_included_library_declare_options.m4  ax_gcovr_code_coverage.m4  ax_git_versioning.m4  ax_package_infos.m4
coverage/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  doxygen.cfg.in  mainpage.dox.in
packaging/: Makefile.am  Makefile.in  control.in  kim.pc.in  libkim.pc.in  postinst.in  prerm.in
resources/: Makefile.am  Makefile.in  kim.bash_completion  test-reads.fastq  test-reads.fastq.bz2  test-sequences.fasta  test-sequences.fasta.bz2  test-variants-generate-reads.awk  test-variants-reads1.csv  test-variants-reads1.fastq  test-variants-reads2.csv  test-variants-reads2.fastq  test-variants-ref.fasta  test-variants.vcf
resources/demo_index/: AG  AT  CA  CC  CG  GA  GC  GT  TC  TG  TT
src/: Makefile.am  Makefile.in  bounded_size_string.cpp  bounded_size_string.h  dna_file_index.cpp  dna_file_index.h  dna_file_reader.cpp  dna_file_reader.h  fastq_file_reader.cpp  fastq_file_reader.h  file_reader.cpp  file_reader.h  gauss.cpp  gauss.h  kim.cpp  kim.h  kim_exception.h  kim_settings.cpp  kim_settings.h  kmer_nodes_subindex.cpp  kmer_nodes_subindex.h  kmer_variant_edges_subindex.cpp  kmer_variant_edges_subindex.h  kmer_variant_graph.cpp  kmer_variant_graph.h  monitor.cpp  monitor.h  read_analyzer.cpp  read_analyzer.h  sort_helper.cpp  sort_helper.h  variant_allele_frequencies.cpp  variant_allele_frequencies.h  variant_filter.cpp  variant_filter.h  variant_filter_driver.cpp  variant_filter_driver.h  variant_filter_parser.cpp  variant_filter_parser.h  variant_filter_parser.ypp  (+12 more)
tests/: Makefile.am  Makefile.in  test_bounded_size_string.cpp  test_dna_file_index.cpp  test_dna_file_reader.cpp  test_fastq_file_reader.cpp  test_file_reader.cpp  test_gauss.cpp  test_kim_exception.cpp  test_kim_settings.cpp  test_kmer_nodes_subindex.cpp  test_kmer_variant_edges_subindex.cpp  test_kmer_variant_graph.cpp  test_sort_helper.cpp  test_variant_filter.cpp  test_variant_nodes_index.cpp
